# dgstore

./: .ackrc  .editorconfig  .envrc  .gitignore  .screenrc  .tool-versions  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.js
.github/workflows/: build.yml
src/: bin.ts  cli.ts  dgstore.ts  digest-file.ts  digest-shortener.ts  digest.ts  event-emitter.ts  file-digest.ts  file-result.ts  hash.ts  index.ts  lib.rs  main.rs  program.ts
tests/: cli.rs
tests/data/: over-the-rainbow.txt  random
