#https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "dgstore"
version = "0.1.0"
authors = ["Simon Oulevay <rust@alphahydrae.com>"]
edition = "2018"
description = "Hash files and store the digests next to the files for future comparison."
homepage = "https://github.com/AlphaHydrae/dgstore#readme"
repository = "https://github.com/AlphaHydrae/dgstore"
license = "MIT"
keywords = ["digest", "hash"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["dgstore.gif"]

[dependencies]
ansi_term = "0.12.1"
glob = "0.3.0"
sha2 = "0.9.8"

[dev-dependencies]
assert_cmd = "2.0.1"
fs_extra = "1.2.0"
indoc = "1.0.3"
maplit = "1.0.2"
predicates = "2.0.2"
tempdir = "0.3.7"
walkdir = "2.3.2"
